--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <ag-grid-angular
-    style="width: 100%; height: 100vh;"
+    style="height: 98vh;"
     class="ag-theme-alpine"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
+    [gridOptions]="agOptions"
 >
 </ag-grid-angular>
