--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ag-grid-angular
     style="height: 98vh;"
-    class="ag-theme-alpine"
+    class="ag-theme-material"
     [gridOptions]="agOptions"
 >
 </ag-grid-angular>
